k8s/movie-management-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-management
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8081
  selector:
    app: movie-management-pod
