k8s/movie-management-service/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /.*
            pathType: "Prefix"
            backend:
              service:
                name: movie-management
                port:
                  number: 80
